[package]
name = "xrd_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "./openapi" }
futures = "0.3"
tokio = { version = "1.0.0", features = ["full"] }
mongodb = "2.0.0"
num-bigint = "0.4.3"
num-integer = "0.1.44"
num-traits = "0.2.14"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
clap = "2.34.0"

[[bin]]
name = "xrdtracker"
path = "src/main.rs"